# greetme

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DELIVERABLES_SUMMARY.md  GETTING_STARTED.md  INDEX.md  INSTALL.md  LICENSE  Makefile  NEW_FEATURES.md  PKGBUILD  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  TESTING.md  greetme.spec  package-deb.sh  package-rpm.sh  package_arch.sh  rustfmt.toml  setup.sh
examples/: config.toml
fonts/: banner.flf  big.flf  block.flf  chrome.flf  pixel.flf  small.flf
man/: greetme.1
src/: animation.rs  cli.rs  config.rs  effects.rs  main.rs  render.rs  themes.rs
tests/: integration_tests.rs
themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  dracula.toml  gruvbox.toml  monokai.toml  onedark.toml  solarized.toml
